--- a/Everton.css
+++ b/Everton.css
@@ -1,10 +1,16 @@
 body{
-    background-color: aqua;
+    background: #ffffff; 
 }
 h1{
     text-align: center;
     color:black;
 }
-p strong{
-    color:azure
+p{
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
+ p strong{
+    color: #00ff00; 
+ }
