--- a/Everton.css
+++ b/Everton.css
@@ -1,16 +1,32 @@
 body{
+    /*alteração da cor do fundo do site*/
     background: #ffffff; 
 }
 h1{
+    /*centarlisa o titalo e altera a cor pra preta*/
     text-align: center;
     color:black;
 }
 p{
+    /*centralisa o texto, define a cor da letra, tamalho da letra e a fonte da letra*/
     text-align: center;
     color: black;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
  p strong{
+    /*alterar a cor do negrito*/
     color: #00ff00; 
+ }
+ #logo{
+    /*altra o tamalho da logo*/
+    width:200px;
+ }
+ #banner-principal{
+    width:100%;
+ }
+ .banner{
+    width: 250px;
+    height: 250px;
+    border-radius: 40%;
  }
