--- a/Everton.css
+++ b/Everton.css
@@ -91,3 +91,24 @@ p{
       border-bottom: 2px solid green;
       font-weight: 700;
    }
+   @media(max-width: 600px){
+      .menu{
+         flex-direction: column;
+         align-items: center;
+      }
+      header{
+         flex-direction: column;
+         align-items: center;
+      }
+      .container{
+         flex-direction: column;
+      }
+      .conteudo{
+         flex-direction: column;
+      }
+      #video{
+         flex-direction: column;
+         align-items: center;
+      }
+
+   }
